--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Coding, Creativity, and Confidence in AI-Era project
 email: ccc-ai@glasgow.ac.uk
-description: Coding, Creativity, and Confidence in AI-Era project aims to understand and improve coding education across disciplines to equip students with fundamental computational thinking skills while the flood of AI-enabled tools are being introduced into the society thus the learning environments. 
+description: >-
+  Coding, Creativity, and Confidence in AI-Era project aims to understand and improve coding education across disciplines to equip students with fundamental computational thinking skills while the flood of AI-enabled tools are being introduced into the society thus the learning environments. 
 baseurl: "/"
 url: "https://CCC-AI-era.github.io
 github_username: yryo617
